week 8 project submission - oAuth etc
